## This file is part of GPaste.
##
## Copyright (c) 2010-2019, Marc-Antoine Perennou <Marc-Antoine@Perennou.com>

SUBDIRS = po

ACLOCAL_AMFLAGS  = -I m4 ${ACLOCAL_FLAGS}
AM_MAKEFLAGS = --no-print-directory
AM_DISTCHECK_CONFIGURE_FLAGS =                                              \
	--with-controlcenterdir="$$dc_install_base/$(controlcenterdir)"     \
	--with-dbusservicesdir="$$dc_install_base/$(dbusservicesdir)"       \
	--with-systemduserunitdir="$$dc_install_base/$(systemduserunitdir)" \
	--enable-appstream-util                                             \
	--enable-gnome-shell-extension                                      \
	--enable-introspection                                              \
	--enable-vala                                                       \
	$(NULL)

AM_CPPFLAGS =                                        \
	-include config.h                            \
	-I$(srcdir)/src/libgpaste                    \
	-I$(srcdir)/src/libgpaste/client             \
	-I$(srcdir)/src/libgpaste/core               \
	-I$(srcdir)/src/libgpaste/daemon             \
	-I$(srcdir)/src/libgpaste/gnome-shell-client \
	-I$(srcdir)/src/libgpaste/io                 \
	-I$(srcdir)/src/libgpaste/keybinder          \
	-I$(srcdir)/src/libgpaste/screensaver-client \
	-I$(srcdir)/src/libgpaste/settings           \
	-I$(srcdir)/src/libgpaste/settings-ui        \
	-I$(srcdir)/src/libgpaste/util               \
	-DG_PASTE_COMPILATION                        \
	-DGTK_API=$(GTK_API)                         \
	-DLOCALEDIR=\"$(localedir)\"                 \
	-DPKGLIBEXECDIR=\"$(pkglibexecdir)\"         \
	-DG_LOG_USE_STRUCTURED=1                     \
	-DGDK_DISABLE_DEPRECATED                     \
	-DGTK_DISABLE_DEPRECATED                     \
	$(NULL)

EXTRA_DIST =       \
	autogen.sh \
	README.md  \
	$(NULL)

CLEANFILES =
SUFFIXES =

bin_PROGRAMS =
pkginclude_HEADERS =
pkglibexec_PROGRAMS =
lib_LTLIBRARIES =
noinst_LTLIBRARIES =

TESTS=
noinst_PROGRAMS= \
	$(TESTS) \
	$(NULL)

# Libraries

include src/libgpaste.mk

# Bindings

include src/gi.mk
include src/vapi.mk

# Core utilities

include src/client.mk
include src/daemon.mk
include src/ui.mk

# Gnome-Shell extension

include src/gnome-shell.mk

# Data

include data/appstream.mk
include data/completions.mk
include data/control-center.mk
include data/dbus.mk
include data/desktop.mk
include data/gsettings.mk
include data/pkg-config.mk
include data/search-provider.mk
include data/systemd.mk

# Man pages

include man/1.mk

# Tests stuff

include tests/gnome-shell-client.mk

# Meson stuff

include meson.mk

# Maintainance stuff

update-po:
	$(MAKE) -C po $@

release:
	$(MAKE) update-po &&                                            \
	$(MAKE) distcheck &&                                            \
	git commit -asm "Release $(PACKAGE_NAME) $(PACKAGE_VERSION)" && \
	git tag -sm "Release $(PACKAGE_NAME) $(PACKAGE_VERSION)" v$(PACKAGE_VERSION)

# Generate a ChangeLog file from 'git log'

dist-hook:
	@ if test -d "$(srcdir)/.git"; then                                             \
	    cd "$(srcdir)";                                                             \
	    echo -e '# Generated by Makefile. Do not edit.\n\n' > $(distdir)/ChangeLog; \
	    $(srcdir)/build-aux/missing --run git log          >> $(distdir)/ChangeLog; \
	fi
